apps/base/networking/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  namespace: networking
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
ports:
  - name: http
    port: 80
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.200
    conditions:
      ready: true
